removing Base64 class, buggy unreliable results. will use apache commons codec